infrastructure/k8s-tooling/network-policy/allowProxytoAPI.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: proxytoapi-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/role: backendapi
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/role: frontend-proxy
      ports:
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 5001
        - protocol: TCP
          port: 5003
        - protocol: TCP
          port: 5004
